# microbits-rock-paper-scissors

./: .gitignore  LICENSE  README.docx  README.md  config.py  main.py  microbit.py  micropython.hex  pyproject.toml
ai_package/: ai.py
docs/: ai_explaination_in_depth.docx  ai_explaination_in_depth.md  ai_explaination_simple.docx  ai_explaination_simple.md
